Bugfixes and refactoring
