# server/src/controllers/developers.controller.ts
@@ -1,12 +1,12 @@
 import { Route, Get, Post, Path, Controller, SuccessResponse, Tags, Response, Body } from 'tsoa';
 import { IResponse } from '../interfaces/IResponse.interface';
-import { ProjectDevelopers } from '../interfaces/projectDevelopers.interface';
 import { NewDeveloper } from '../interfaces/newDeveloper.interface';
 
 const developers = [
-    { id: 0, name: 'dev0', email: '0@dev.com' },
-    { id: 1, name: 'dev1', email: '1@dev.com' },
-    { id: 2, name: 'dev2', email: '2@dev.com' }
+    { id: 0, name: 'dev 0', email: '0@dev.com' },
+    { id: 1, name: 'dev 1', email: '1@dev.com' },
+    { id: 2, name: 'dev 2', email: '2@dev.com' },
+    { id: 3, name: 'dev 3', email: '3@dev.com' }
 ];
 
 @Route('/developers')
@@ -82,29 +82,6 @@ export class DevelopersController extends Controller {
             } else {
                 throw new Error("Ezzel az email címmel már van fejlesztő!");
             }
-        } catch(err) {
-            this.setStatus(400);
-
-            return {
-                message: 'Error',
-                status: '400',
-                data: err.message
-            };
-        }
-    }
-
-    @Post('/addToProject')
-    @SuccessResponse('200', 'OK')
-    @Response<IResponse>('400', 'Bad Request')
-    public async addToProject(@Body() body: ProjectDevelopers): Promise<IResponse> {
-        try {
-            // Business logic majd ide kerül ha lesz adatbázis
-            // TODO: Fejlesztó hozzáadása a project_developers táblába projekt_id-val
-            return {
-                message: 'OK',
-                status: '200',
-                data: 'Hozzáadva!'
-            };
         } catch(err) {
             this.setStatus(400);
 
