# server/src/interfaces/projectDevelopers.interface.ts
@@ -1,4 +1,0 @@
-export interface ProjectDevelopers {
-    developer_id: number;
-    projet_id: number;
-}
